# Amca

./: .gitignore  INSTALL.py  INSTALL.sh  README.md  install_uninstall_update.py  output.txt  project  readme.md
Documentation_Obsidian_vault/: README.md
Documentation_Obsidian_vault/.obsidian/: app.json  workspace.json
Documentation_Obsidian_vault/.obsidian/snippets/: hide_RAW_attachment.css
Documentation_Obsidian_vault/Development/: asd.md
amca/: amca.py
amca/configs/: amca_config.json
amca/plugins/: any.py  git.py  pl_meson.py
amca/src/: amca_impl.py
amca/src/plugin_stuff/: checker.py  loader.py
amca_config/Amca_config/: general_conf.json
amca_impl/: amca_runner_posix.c
amca_impl/snakes/: amca.py
clients/: amca.py
compiled/amca/: amca
compiled/amcapl/: amcapl
compiled/config/: general_conf.json
config/plugins/: plugin_conf.json
management_src/: core.py  dev.py  helpers.py  install.py  uninstall.py  update.py
obsidian_vault/.obsidian/: appearance.json  workspace.json  workspaces.json
obsidian_vault/Development/: README.md  Style Guide.md
obsidian_vault/Documentation/: README.md
preset_plugins/any/: init.py
preset_plugins/autoScr/: init.py
preset_plugins/autosh/: init.py
preset_plugins/meson/: init.py  meson.build (template)  meson.py  output.txt
preset_plugins/old_meson/: init.py  meson.build
preset_plugins/old_meson/impl/: meson_implementation_i_guess.py
preset_plugins/old_meson/impl/arging/: arg_eval.py  argparse.py
preset_plugins/old_meson/impl/arging/modes/: clean.py  run.py
preset_plugins/old_meson/impl/arging/version_interpretations/v1/: __init__.py
preset_plugins/old_meson/impl/arging/version_interpretations/v2_0_1/: __init__.py
preset_plugins/old_meson/impl/util/: logger.py
runners/: amca  amcapl
src/: amca.py  amcapl.py  config_path.py  tree.txt
src/impl/: amca_main.py  amcapl_main.py  main.py
src/plugin/: plugin_base.py
src/runner_src/: runner.c
test/: main.c
test/kek/: b.c
test2/include/: benchmark.h
test2/src/: main.c
tests/plugins/meson/: .amca_sources_cache  meson.build
tests/plugins/meson/test2/: .clang-format  globber.py  meson.build
tests/plugins/meson/test2/include/: common.h
tests/plugins/meson/test2/src/: dev_main.c
(+86 files in other folders)
